# lmdb-feedstock

./: .travis.yml  README.md  conda-forge.yml
.ci_support/: linux_64_.yaml  linux_ppc64le_.yaml
.github/: CODEOWNERS
recipe/: CMakeLists.txt  Makefile.patch  bld.bat  build.sh  lmdbConfig.cmake.in  meta.yaml
recipe/cmake_test/: CMakeLists.txt
